# sentinel-dayone-public

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: catalog.yaml  roles.yaml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  buddy-digest-cronjob.yaml  configmap.yaml  deployment.yaml  ingestion-cronjobs.yaml  secret.yaml  service.yaml
docs/: architecture.md  frontend.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: DecisionTrail.tsx
src/sentinel/: __init__.py  buddy_digest.py  cli.py  config.py
src/sentinel/agent/: __init__.py  orchestrator.py  prompts.py
src/sentinel/api/: __init__.py  main.py  webhooks.py
src/sentinel/catalog/: __init__.py  bamboohr.py  base.py  mock.py  servicenow.py  workday.py
src/sentinel/graph/: __init__.py  client.py  drill_seed.py  schema.cypher  schema_init.py
src/sentinel/graph/ingestion/: __init__.py  base.py  confluence.py  embedder.py  github.py  linear.py  local_embedder.py  slack.py
src/sentinel/provisioning/: __init__.py  runner.py
src/sentinel/provisioning/steps/: __init__.py  github.py  kubernetes.py  vault.py
src/sentinel/retrieval/: __init__.py  engine.py  traversal_graph.py
tests/: conftest.py  test_agent.py  test_buddy_digest.py  test_catalog.py  test_local_embedder.py  test_provisioning.py  test_retrieval.py  test_traversal_graph.py
