[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-day-one"
version = "0.2.0"
description = "Onboarding agent over your engineering knowledge graph"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MPL-2.0" }
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "neo4j>=5.27.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0.2",
    "openai>=1.50.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "click>=8.1.7",
    "prometheus-client>=0.21.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]
aws = [
    "boto3>=1.35.0",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
